# DocSkiBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/auth/: __init__.py  server.py
src/logger/: __init__.py
src/skills/: agent.py  bot.py  forms.py  picker.py  state.py
src/skills/docs_skill/: __init__.py  base.py  diary.py  documents.py  gdocs.py  gdrive.py
